fixed word break on trxn

--- a/src/app/components/transaction/transaction.component.css
+++ b/src/app/components/transaction/transaction.component.css
@@ -1,5 +1,5 @@
 div, .word-break {
-    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .success {
